# Bullseye

./: README.md  main.py  pyproject.toml  test.py
src/: main.py  model.py
tests/: test.py
